// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details with isFetching data should match snapshot 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#ff6600",
          "height": 50,
          "justifyContent": "center",
          "paddingLeft": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Hacker News
      </Text>
      <Text
        style={
          Object {
            "color": "black",
          }
        }
      >
        new | Past | comments | ask | show | jobs
      </Text>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      />
      <Text>
        Comments
      </Text>
      <View
        style={
          Object {
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`Details with success data should match snapshot 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#ff6600",
          "height": 50,
          "justifyContent": "center",
          "paddingLeft": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Hacker News
      </Text>
      <Text
        style={
          Object {
            "color": "black",
          }
        }
      >
        new | Past | comments | ask | show | jobs
      </Text>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      />
      <Text>
        Comments
      </Text>
      <Text
        testID="detail-feed-text"
      >
        Fuchsia Workstation
      </Text>
      <View
        style={
          Object {
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      >
        <View />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
